[package]
name = "silverfish"
description = "Easily edit Minecraft worlds with a simple, fast and powerful API"
version = "0.3.0"
edition = "2024"
authors = ["ReeZey", "VilleOlof"]
categories = ["parser-implementations", "game-development"]
keywords = ["minecraft", "nbt", "mca", "edit", "block"]
readme = "readme.md"
license = "MIT"
repository = "https://github.com/VilleOlof/silverfish"
exclude = ["tests/*", "logo.png"]

[dependencies]
simdnbt = "0.10"
mca = "2.1"
thiserror = "2"
fixedbitset = "0.5"
ahash = "0.8"
dashmap = { version = "6.1.0", features = ["rayon"] }
rayon = "1.12"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "full_region_set_block"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[workspace]
members = ["examples/*"]
